--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,16 @@
+/* Custom properties */
+:root{
+    --primary: #243853;
+    --secundary:#5C9396;
+    --lightgray:#CCD9CF;
+    --light: #F7EDD2;
+    --bg-color: #9BC0B9;
+}
+
 /* apply a natural box layout model to all elements, but allowing components to change */
 html {
   box-sizing: border-box;
-  font-size: 10px;
+  font-size: 16px;
 }
 *, *:before, *:after {
   box-sizing: inherit;
@@ -11,18 +20,223 @@ html {
 
 body{
     font-family: 'Roboto', sans-serif;
-    color: #5C9396;
-    color: #9BC0B9;
-    color: #CCD9CF;
-    color: #F7EDD2;
-    color: #0B1828;
+    background-color: var(--bg-color);
+}
+h2, h3{
+    font-size: 1.3rem;
+    text-align: center;
+    color: var(--primary);
+}
+.btn{
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 100%;
+    padding: .6rem 1rem;
+    background-color: var(--secundary);
+    border: none;
+    font-size: 1rem;
+    color: var(--light);
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+}
+.btn:hover{
+    opacity: .6;
+}
+.wrapper{
+    max-width: 1200px;
+    width: 100%;
+    margin: 0 auto;
+    padding: 1rem .6rem;
+    display: inherit;
+    justify-content: inherit;
+    align-items: inherit;
+}
+
+.shadow{
+    -webkit-box-shadow: 4px 6px 8px 1px rgba(0,0,0,0.54); 
+    box-shadow: 4px 6px 8px 1px rgba(0,0,0,0.54);
 }
 /* HEADER */
 .header{
-    background-color: #5C9396;
-    padding: 2rem 0;
+    background-color: var(--secundary);
+    padding: .9rem 0;
+    font-weight: 300;
 }
 .header h1{
     text-align: center;
-    color: #F7EDD2;
+    font-size: 1.5rem;
+    font-weight: 500;
+    color: var(--light);
+}
+/* Register */
+.form{
+    background-color: var(--lightgray);
+    padding: .6rem;
+    border-radius: 3px;
+}
+
+h2 span{
+    margin-top: 5px;
+    display: block;
+    font-size: .8rem;
+    font-weight: 300;
+}
+.form-field{
+    margin: 1rem 0;
+}
+.form-field label{
+    display: block;
+    font-size: 1rem;
+    color: var(--primary);
+    font-weight: 400;
+}
+.form-field input{
+    width: 100%;
+    height: 2.7rem;
+    font-size: 1rem;
+    border: none;
+}
+
+/* CONTACTOS */
+.contactos{
+    background-color: var(--secundary);
+    padding: 1rem 0.5rem;
+}
+h3 span{
+    font-size: 2rem;
+}
+table{
+    width: 100%;
+}
+
+thead{
+    display: none;
+}
+.table-row{
+    display: block;
+    margin: 1rem 0;
+    background-color: var(--lightgray);
+}
+.cell{
+    display: block;
+    border-bottom: 1px solid var(--light);
+}
+.cell::before{
+    content: attr(data-label);
+    display: inline-block;
+    font-weight: 500;
+    width: 40%;
+    padding: .8rem .5rem;
+    margin-right: 1rem;
+    border-right: 1px solid var(--light);
+}
+.options a{
+    color: var(--primary);
+}
+
+/* Edit.php */
+.bar{
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    align-items: center;
+}
+.bar .btn{
+    background-color: var(--bg-color);
+}
+
+.notificacion{
+    position: fixed;
+    top: 0;
+    right: 0;
+    font-size: 1rem;
+    margin: 1rem 1rem 0 0;
+    padding: 0.5rem 2rem;
+    border-radius: 5px;
+    transition: all 0.5s ease-in-out;
+}
+.error{
+    background-color: rgb(163, 0, 33);
+    color: #fff;
+}
+.success{
+    background-color: green;
+    color: rgb(179, 241, 117);
+}
+@media screen and (min-width: 768px){
+    .btn{
+        width: 6rem;
+        font-size: 1.3rem;
+    }  
+    .form-fields-container{
+        display: flex;
+        justify-content: space-between;
+    }   
+    .form-field{
+        width: calc(33.3% - 1rem);
+    }
+    h2{
+        font-size: 1.5rem;
+    } 
+    .form-field label{
+        font-size: 1.1rem;
+    }
+    .contactos{
+        padding: 1rem 2rem;
+    }
+    .contactos .form-field{
+        width: 100%;
+    }
+    .contactos .form-field input{
+        border-radius: 3px;
+    }
+    thead{
+        display: block;
+        margin: 0;
+    }
+    .table-row{
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        margin: 0;
+        padding: .8rem 0;
+        text-align: center;
+    }
+    .cell{
+        width: 25%;
+        border-bottom: none;
+    }
+    .cell::before{
+        content: attr(data-label);
+        display: none;
+    }
+    .options{
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .options i{
+        font-size: 1.5rem;
+    }
+}
+@media screen and (min-width: 1024px){
+    .header{
+        padding: 1.2rem 0;
+    }
+    .header h1{
+        font-size: 1.8rem;
+        font-weight: 400;
+    }
+    .wrapper{
+        padding: 1rem 4rem;
+    }
+    .form{
+        padding: 1rem 2.5rem;
+    }
+    .form-field label{
+        font-size: 1.1rem;
+    }
+    .contactos{
+        padding: 1rem 12rem;
+    }
 }
